--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello world!</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, molestiae modi! Reprehenderit eos quis molestias deserunt accusamus? Perferendis voluptas eos facilis ipsa, porro quidem excepturi est pariatur eveniet possimus a.</h2>
     
 </body>
 </html>
