--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Devil may cry 3</h1>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, molestiae modi! Reprehenderit eos quis molestias deserunt accusamus? Perferendis voluptas eos facilis ipsa, porro quidem excepturi est pariatur eveniet possimus a.</h2>
     
 </body>
