--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Devil may cry 3</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, molestiae modi! Reprehenderit eos quis molestias deserunt accusamus? Perferendis voluptas eos facilis ipsa, porro quidem excepturi est pariatur eveniet possimus a.</h2>
-    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex tenetur molestias voluptate necessitatibus veniam sequi nesciunt magnam quos animi. Sint illum inventore labore id explicabo nulla deleniti aperiam qui impedit.</h3>
+    <h1>Life by a suricate</h1>
+    <h2>Come, dorme e defende a familia de cascavéis!!</h2>
+    <h3>Me alimento de insetos e larvas.</h3>
     <h1>Helloe erld</h1>
+    <img src="\suricates.webp" alt="Suricates">
 </body>
 </html>
