--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello world</h1>
     <img src="/capivara-119654188.jpg" alt="capivara">
     <img src="galinha-101572393-1000x667.jpg" alt="galinha-101572393-1000x667">
+    <img src="gatomecanico.jpg" alt="gatomecanico">
 </body>
 </html>
