--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Devil may cry 3</h1>
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, molestiae modi! Reprehenderit eos quis molestias deserunt accusamus? Perferendis voluptas eos facilis ipsa, porro quidem excepturi est pariatur eveniet possimus a.</h2>
-    <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab magnam impedit aliquid explicabo error facilis sapiente vitae veniam atque deserunt, necessitatibus laborum eos quo esse dolorem? Corporis aliquid voluptatibus nihil?</h3>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magnam impedit aliquid explicabo error facilis sapiente vitae veniam atque deserunt, necessitatibus laborum eos quo esse dolorem? Corporis aliquid voluptatibus nihil?</h3>
     <h1>Helloe erld</h1>
     <img src="/capivara-119654188.jpg" alt="capivara">
     <img src="galinha-101572393-1000x667.jpg" alt="galinha-101572393-1000x667">
